--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta property="og:title" content="CountMe - Il contatore interattivo" />
     <meta property="og:description" content="Un semplice contatore online che ti permette di incrementare, decrementare e resettare il valore facilmente." />
     <meta property="og:image" content="https://https://adriana-rs-countme.netlify.app" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://adriana-rs.github.io" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="it_IT" />
