--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./assets/img/favicon.svg" type="image/x-icon">
     <meta property="og:title" content="CountMe - Il contatore interattivo" />
     <meta property="og:description" content="Un semplice contatore online che ti permette di incrementare, decrementare e resettare il valore facilmente." />
-    <meta property="og:image" content="https://https://adriana-rs-countme.netlify.app/assets/img/favicon.svg" />
+    <meta property="og:image" content="https://adriana-rs-countme.netlify.app/assets/img/favicon.svg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://adriana-rs.github.io" />
