aggiunto div buttonWrapper

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
     <div class="container">
         <div class="counter-display">
         <input type="number" id="incrementStep" class="input-step" value="1">
-        <div class="counter-button">
-            <button id="decrementButton" class="button" aria-label="Decrementa">-</button>
-            <p id="counter" class="counter-value">0</p>
-            <button id="incrementButton" class="button" aria-label="Incrementa">+</button>           
-        </div>
-            <button id="resetButton" class="button" aria-label="Resetta il contatore">Reset</button>
+            <div id="buttonWrapper" class="counter-button">
+                <button id="decrementButton" class="button" aria-label="Decrementa">-</button>
+                <p id="counter" class="counter-value">0</p>
+                <button id="incrementButton" class="button" aria-label="Incrementa">+</button>           
+            </div>
+                <button id="resetButton" class="button" aria-label="Resetta il contatore">Reset</button>
+            </div>
         </div>
     </div>   
     <div class="instructions">
