script.js caricato nella pagina

--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
             <a href="https://www.instagram.com/adrianars20/profilecard/?igsh=eW42cXphbTdseGRp" target="_blank">Instagram</a> | 
         </div>
     </footer>    
-    <script src="./js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
